# algotrap

./: .env.example  .gitignore  Cargo.toml  GEMINI.md  Makefile  Makefile.toml  README.md  base.Dockerfile  pkgx.yml  test.py
.github/workflows/: nightly.yml
bins/cryptobot/: .env.example  .env.template  Cargo.toml  Makefile.toml
bins/cryptobot/deployment/: Dockerfile  deploy_k8s_cronjobs.sh  entrypoint.sh  setup_native_cronjobs.sh
bins/cryptobot/deployment/envs/: ETH-USDT.env.example
bins/cryptobot/k8s/: cronjob.yaml.template
bins/cryptobot/src/: main.rs
bins/etf_dashboard/: Cargo.toml  README.md
bins/etf_dashboard/src/: main.rs
dashboard/: charts.js  dataframeUtils.js  output.js
dashboard/tests/: criticalFunctions.test.js
deployment/: Dockerfile  deploy_cronjobs.sh  entrypoint.sh  generate_secret.sh
examples/: ma_calculator.rs  rsi_calculator.rs
k8s/: cronjob.yaml  cronjob.yaml.template  secret.yaml.template
src/: df_utils.rs  lib.rs  main.rs  prelude.rs  time_utils.rs
src/ext/: bingx.rs  mod.rs  ntfy.rs  webdriver.rs  yfinance.rs
src/model/: kline.rs  mod.rs  timeframe.rs
src/ta/: common.rs  experimental.rs  ma.rs  metric.rs  mod.rs  ohlc.rs  rsi.rs  volatility.rs
