[package]
name = "algotrap"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.45", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tap = "1.0.1"
polars = { version = "0.46", default-features = false, features = [
	"lazy",
	"fmt",
	"polars-ops",
	"diff",
	"dynamic_group_by",
	"rolling_window",
	"ewma",
	"dtype-array",
	"json",
	"round_series",
] }
polars-row-derive = "0.1.0"
chrono = "0.4"
minijinja = "2.10"
futures = "0.3.31"
openssl = { version = "0.10", features = ["vendored"] }
dotenv = "0.15.0"
envy = "0.4"
rayon = "1.10.0"
