[workspace]
members = [".", "bins/cryptobot", "bins/etf_dashboard"]
default-members = [".", "bins/etf_dashboard"]

[package]
name = "algotrap"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["cookies", "json"] }
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tap = "1.0.1"
polars = { version = "0.46", default-features = false, features = [
	"lazy",
	"fmt",
	"polars-ops",
	"diff",
	"dynamic_group_by",
	"rolling_window",
	"cum_agg",
	"ewma",
	"dtype-array",
	"json",
	"round_series",
] }
polars-row-derive = "0.1.0"
chrono = "0.4"
fantoccini = { version = "0.22.0", optional = true }
tracing = "0.1.41"
rand = "0.9.1"
humantime = "2.2.0"
url = { version = "2.5.4", optional = true }
validator = { version = "0.20.0", features = ["derive"] }

[features]
default = ["ntfy"]
webdriver = ["dep:fantoccini"]
ntfy = ["dep:url"]


[[example]]
name = "rsi_calculator"
path = "examples/rsi_calculator.rs"

[[example]]
name = "ma_calculator"
path = "examples/ma_calculator.rs"
