[package]
name = "cryptobot"
version = "0.1.0"
edition = "2024"

[dependencies]
algotrap = { path = "../.." }
minijinja = "2.10"
futures = "0.3.31"
dotenv = "0.15.0"
envy = "0.4"
rayon = "1.10.0"
polars = { version = "0.51", default-features = true, features = [
	"lazy",
	"fmt",
	"json",
	"timezones",
] }
serde = "1.0.219"
serde_json = "1.0.140"
chrono = "0.4.41"
tokio = { version = "1.45", features = ["full"] }
