[package]
name = "etf_dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
algotrap = { path = "../..", features = ["webdriver"] }
chrono = "0.4.41"
fantoccini = "0.22.0"
futures = "0.3.31"
minijinja = "2.11.0"
polars = { version = "0.51.0", default-features = true, features = [
	"lazy",
	"polars-ops",
	"temporal",
	"dynamic_group_by",
	"rolling_window",
	"strings",
] }
rand = "0.9.1"
reqwest = { version = "0.12.22", features = ["cookies", "json"] }
scopeguard = "1.2.0"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
